--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </class>
            <div class="col-md-4">
            <div class="imgAbt">
-              <img  width="300" height="300" src="img/egg_chef.png">
+              <img  width="300" height="300" src="img/eggchef.png">
            </div>
            </div>
           <div class="col-md-6">
